--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
-    "client": "npm start --prefix /frontend",
+    "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d"
